--- a/src/components/Profile/TheWall/Post/Post.module.css
+++ b/src/components/Profile/TheWall/Post/Post.module.css
@@ -1,39 +1,30 @@
-.post {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 20px;
-    color: rgb(54, 54, 54);
-    /*background-color: rgba(248, 61, 61, 0.192);*/
-
-
-    line-height: 18px;
-    /*margin-bottom: 20px;*/
+.post:nth-child(odd) {
+    background-color: #e7e7e7;
 }
 
-.postContainer {
-    box-shadow: 0 0px 0px 1px rgba(0, 0, 0, 0.151);
-    border-radius: 10px;
-    background-color: rgba(248, 61, 61, 0.192);
-    padding-bottom: 10px;
-    margin-bottom: 15px;
-}
 .like {
-    margin-left: 10px;
-    width: 70px;
-    height: 10px;
-    font-size: 14px;
-}
-.delete {
-    width: 15px;
-    height: 15px;
     cursor: pointer;
-    margin-left: auto;
-    margin-right: 3px;
+    font-size: 1em!important;
+    position: absolute;
+    bottom: 10px;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
+
+.unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 .avatar {
-    width: 40px;
-    height: 40px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     margin: 5px;
 }
@@ -47,6 +38,7 @@
     display: flex;
     flex-direction: column;
 }
+
 .buttons button {
     border: none;
     color: white;
